# nomad-porous-materials

./: .cruft.json  404.html  index.html  mkdocs.yml  pyproject.toml
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
nomad-porous-materials/: .cruft.json  README.md
nomad-porous-materials/.github/workflows/: actions.yml
nomad-porous-materials/docs/: index.md
nomad-porous-materials/src/nomad_porous_materials/parsers/: __init__.py  myparser.py
nomad-porous-materials/src/nomad_porous_materials/schema_packages/: __init__.py
nomad-porous-materials/tests/apps/: test_app.py
nomad-porous-materials/tests/data/: test.archive.yaml
reference/: references.html
search/: search_index.json
src/nomad_porous_materials/apps/: __init__.py
src/nomad_porous_materials/normalizers/: __init__.py  mof_deconstructor.py  mynormalizer.py  porositynormalizer.py
src/nomad_porous_materials/schema_packages/: mypackage.py
tests/: conftest.py
tests/apps/: test_app.py
tests/normalizers/: test_normalizer.py
tutorial/: tutorial.html
